[gd_scene load_steps=12 format=2]

[ext_resource path="res://minigames/spaceshooter/assets/sprites/astroid.png" type="Texture" id=1]
[ext_resource path="res://minigames/spaceshooter/assets/sprites/astroid2.png" type="Texture" id=2]
[ext_resource path="res://minigames/spaceshooter/assets/sprites/astroid3.png" type="Texture" id=3]
[ext_resource path="res://minigames/spaceshooter/assets/sprites/astroid4.png" type="Texture" id=4]
[ext_resource path="res://minigames/spaceshooter/Astroid.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.80086

[sub_resource type="CircleShape2D" id=2]
radius = 6.10737

[sub_resource type="CircleShape2D" id=3]
radius = 4.57056

[sub_resource type="CircleShape2D" id=4]
radius = 5.80345

[sub_resource type="CircleShape2D" id=5]
radius = 6.08276

[sub_resource type="CircleShape2D" id=6]
radius = 4.2

[node name="Astroid" type="Node2D"]
script = ExtResource( 5 )

[node name="Astroid1" type="Sprite" parent="."]
visible = false
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Astroid1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Astroid1/StaticBody2D"]
shape = SubResource( 1 )

[node name="Astroid2" type="Sprite" parent="."]
visible = false
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Astroid2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Astroid2/StaticBody2D"]
position = Vector2( 3.1, -1.7 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Astroid2/StaticBody2D"]
position = Vector2( -3.5, 3.1 )
shape = SubResource( 3 )

[node name="Astroid3" type="Sprite" parent="."]
visible = false
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="Astroid3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Astroid3/StaticBody2D"]
position = Vector2( 5.2, -1.9 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Astroid3/StaticBody2D"]
position = Vector2( -5.8, 2.7 )
shape = SubResource( 5 )

[node name="Astroid4" type="Sprite" parent="."]
visible = false
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Astroid4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Astroid4/StaticBody2D"]
shape = SubResource( 6 )
